# halo2-playground

./: Cargo.toml  README.md
benchmarks/cab2/: Cargo.toml
benchmarks/cab2/src/: cab2-1.rs  cab2.rs
benchmarks/darkfi-e51ba71/: Cargo.toml
benchmarks/darkfi-e51ba71/ex/: darkfi-0.rs
benchmarks/darkfi-e51ba71/src/zk/: mod.rs
benchmarks/darkfi-e51ba71/src/zk/gadget/: mod.rs
benchmarks/devcon/: Cargo.toml
benchmarks/halo2-rsa-b66eeeb/: Cargo.toml
benchmarks/halo2-snark-aggregator-892a7e4/: Cargo.toml
benchmarks/halo2-snark-aggregator-892a7e4/ex/: snark-0.rs
benchmarks/halo2-snark-aggregator-892a7e4/src/: arith.rs
src/: cab2-0.rs  cab2-bug0.rs  devcon-0.rs  new0.rs
src/tmp/: test0.rs  test1.rs  test2.rs  test3.rs
