[package]
name = "halo2-playground"
version = "0.1.0"
edition = "2021"
rust-version = "1.56.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cab2"
path = "src/cab2.rs"

[[bin]]
name = "cab2-bug0"
path = "src/cab2-bug0.rs"

[[bin]]
name = "cab2-bug1"
path = "src/cab2-bug1.rs"

[[bin]]
name = "test0"
path = "src/test0.rs"

[[bin]]
name = "test1"
path = "src/test1.rs"

[[bin]]
name = "test2"
path = "src/test2.rs"

[[bin]]
name = "test3"
path = "src/test3.rs"

[[bin]]
name = "new0"
path = "src/new0.rs"

[dependencies]
halo2_proofs = { git = "https://github.com/appliedzkp/halo2.git", rev = "96d9bde905a20117b4350ffba0b0a6479aa63f0a" }